src/tests/snapshots/synoik__tests__window_opening__check_target_output_and_workspace@ws2-out2-fsT-wfsB2-spA1.snap
---
source: src/tests/window_opening.rs
description: "open on workspace: ws-2\nopen on output: headless-2\nopen fullscreen: true\nwant fullscreen: B2\nset parent: A1"
expression: snapshot
---
final monitor: headless-2
final workspace: 0 (ws-2)

initial configure:
size: 1920 × 1080, bounds: 1868 × 1028, states: [Fullscreen]

post-map configures:


unfullscreen configure:
size: 0 × 0, bounds: 1900 × 1060, states: []
